# haskell

./: .gitignore  Gruntfile.js  dir.hs  dirtree.hs  guss.hs  hello-when.hs  hello.hs  input  input.hi  input.hs  io.hs  package.json  palindrome  palindrome.hi  palindrome.hs  points.hs  practice1.hs  practice2.hs  range.ls  ranges.hs  recursiveRanges.hs  subsetOfSize.hs
ab/: ab.hi  ab.hs
adt/: queue.hs  queuestate.hs  serverstate.hs  store.hs
async/: 2arrow.hs  arrow.hs  shell.hs
challenge/: bst.hs  kmp.hs  kmp2.hs  min.hs  min.txt  min2.txt  pascal.hs  sierpinski.hs  tree.hs  update-list.hs
diag/: .gitignore  Chart.lhs  Range.hs  first.hs  func.hs  hmathfuncs.hs  mathfuncs.hs  second.hs  test.hs  tot1.hi  tot1.hs
functors/: HasDefaultValue.hs  fact.hs  io  io.hi  io.hs  pole.hs  trees.hs
fundep/: main.hs
happstack/: router.hs  simplest.hs
macademy/: user.hs
math/: matrix.hs
monadT/: bottle.hs  listT.hs  maybeT.hs  stateT.hs
monads/: difflist.hs  functions.hs  invent.hs  problist.hs  random.hs  state.hs  writer.hs
normal/: diag.hi  diag.hs  normal  normal.hi  normal.hs
proj1/: proj1.cabal  proj1.lkshs  proj1.lkshw
proj1/fun/friday/: hello.txt
thomson/: Pictures.hs  algebric.hs  books.hs  classes.hs  distance.hs
trees/: tree.hi  tree.hs
